Week 2 : Adding maven plugin to enable native access